card image not showing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="card-details-footer">
                             <div class="footer-img-holder">
-                                <img src="/image/image-avatar.webp" alt="owner passport">
+                                <img src="image/image-avatar.webp" alt="owner passport">
                             </div>
                             <h3>Greg Hooper</h3>
                         </div>
